--- a/modalBox/index.html
+++ b/modalBox/index.html
@@ -126,6 +126,7 @@
             font-size: 20px;
         }
     </style>
+    <meta name="google-site-verification" content="aMMC5l0hRuYouU-bXKHfrMYWpzNVEH3fFH7_N15-Drg" />
 </head>
 <body>
 
